--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
 </head> 
 <body>
 	<header>
-		<nav class="nav">
+		<nav class="nav justify-content-center">
 			<a class="nav-link" href="#"><img src="https://storage.googleapis.com/piggybankservice.appspot.com/statics/piggy-png_1_.png" class="logo-alt" alt=""></a>
-			<a class="nav-link" href="https://www.piggyvest.com/about" class="menu-link">About</a>
-			<a class="nav-link" href="https://www.piggyvest.com/stories" class="menu-link">Stories</a>
-			<a class="nav-link" href="https://www.piggyvest.com/faq" class="menu-link">FAQ</a>
-			<a class="nav-link" href="https://medium.com/@Piggyvest" target="_blank" class="menu-link">Blog</a>
-			<a class="nav-link" href="https://www.piggyvest.com/logout" class="menu-link">Log Out</a>
 		</nav>
 	</header>
 	<div class="jumbotron">
